Linespacing to prevent overlap fixes #155

--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -6057,6 +6057,9 @@ pre {
 a > em:first-of-type {
   font-style: normal;
 }
+ol.arabic.simple > li {
+  line-height: 26px;
+}
 ul#search-dropdown {
   background-color: #f2f1ec;
   max-height: 500px;
