--- a/site/static/less/content.less
+++ b/site/static/less/content.less
@@ -22,3 +22,6 @@ pre {
 a > em:first-of-type{
   font-style: normal;
 }
+ol.arabic.simple > li{
+  line-height: 26px;
+}
